# aliceandbob

./: .dockerignore  .gitignore  Dockerfile  README.md  buf.gen.yaml  providers.example.toml
.github/workflows/: ci.yml  docker.yml
proto/aliceandbob/v1/: agents.proto  game.proto  service.proto
scripts/: check-no-emdash.sh
server/: Cargo.toml  build.rs
server/src/: config.rs  engine.rs  gm.rs  llm.rs  main.rs  population.rs  store.rs
web/: index.html  package-lock.json  package.json  tsconfig.app.json
web/src/: App.tsx  agents.ts  api.ts  index.css  main.tsx
web/src/pages/: Dashboard.tsx  MatchViewer.tsx  MemoLineage.tsx
