[package]
name = "aliceandbob-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = "0.8"
connectrpc-axum = "0.1"
futures = "0.3"
# default features pull in a blocking HTTP resolver that panics in async context
jsonschema = { version = "0.46", default-features = false }
pbjson = "0.9"
pbjson-types = "0.9"
prost = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "1"
tower-http = { version = "0.7", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
connectrpc-axum-build = { version = "0.1", features = ["fetch-protoc"] }
